Fixed horizontal scroll bar bug

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,16 +8,13 @@
 main {
   flex-grow: 1;
   display: flex;
-  /* align-items: stretch; */
-  justify-content: space-around;
-  min-width: 100vw;
 }
 
 .game-container {
   margin: 10px;
 }
 .game-board {
-  /* margin: 10px; */
+  margin: 10px;
   display: grid;
   grid-template-columns: repeat(25, 1fr);
   grid-template-rows: repeat(25, 1fr);
